syntax = "proto3";

package calc;

option go_package = "calcpb";

message Numbers {
    int32 num1 = 1;
    int32 num2 = 2;
}

message CalcRequest {
    Numbers numbers = 1; 
}

message CalcResponse {
    int32 result = 1;
}

service CalcService {
    rpc SumNums(CalcRequest) returns (CalcResponse) {};
}